required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------
- completed implementation of RFC24 (#2442, #2032)

- mapwcs.c: require VERSION parameter for DescribeCoverage and GetCoverage (#2473)

- mapwcs.c: change error token to MS_WCSERR instead of MS_WMSERR (#2474)

- mapwcs.c: set exception MIME type to application/vnd.ogc.se_xml for 1.0.0 (#2470)

- mapwcs.c: Generate a decently formatted exception if an WCS XML POST request
  is received (#2476).

- mapowscommon.c: support OWS Common 1.1.0 as well (#2071)

- mapogcsos.c: support SOS 1.0.0 (#2246)

- Implement mapObj.setCenter, mapObj.offsetExtent, mapObj.scaleExtent, 
  rectObj.getCenter at the SWIG API (#2346)

- mapogcfilter.c: use USE_LIBXML2 in ifdefs (#2416)

- clean up naming conventions of Shapefile API (#599)

- use msComputeBounds() instead, since it's already in the codebase (#2087)

- set shapeObj bounds from WKT (#2087)

- fixed issue where path following labels sometimes used the supplied
setting for position. In all cases with ANGLE FOLLOW we want to force
position MS_CC regardless of what is set in the mapfile.

- enforce (-99 -99) to be the penup value for vector symbols (#1036)

- Support for labeling features (polygon & line) prior to clipping. This
results in stable label positions regardless of map extent. (#2447)

- Support for quantization and forced palette png output with RGBA images
  (#2436)

- SLD using a single BBOX filter should generate an SQL ststement for 
  oracle/postgis/ogr (#2450)

- Accurate Calculation of legend size for WMS LegendURL (#2435)

- Converted mapogr.cpp to use OGR C API instead of C++ classes to allow